SF-Perkin/force-app/main/default/objects/Product2/fields/B2B_Dynamic_Range__c.field-meta.xml
<CustomField>
    <fullName>B2B_Dynamic_Range__c</fullName>
    <label>Dynamic Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>