SF-Perkin/force-app/main/default/objects/Product2/fields/B2B_Height__c.field-meta.xml
<CustomField>
    <fullName>B2B_Height__c</fullName>
    <label>Height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>