SF-Perkin/force-app/main/default/objects/Product2/fields/B2B_Minimum_Temperature__c.field-meta.xml
<CustomField>
    <fullName>B2B_Minimum_Temperature__c</fullName>
    <label>Minimum Temperature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>