SF-Perkin/force-app/main/default/objects/Product2/fields/B2B_Model_Name__c.field-meta.xml
<CustomField>
    <fullName>B2B_Model_Name__c</fullName>
    <label>Model Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>