SF-Perkin/force-app/main/default/objects/Product2/fields/B2B_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>B2B_Part_Number__c</fullName>
    <label>Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>