SF-Perkin/force-app/main/default/objects/Product2/fields/B2B_Product_Compatibility__c.field-meta.xml
<CustomField>
    <fullName>B2B_Product_Compatibility__c</fullName>
    <description>Used to select the values for products. Perk-75</description>
    <label>Product Compatibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2400 Series Analyzer</fullName>
            </value>
            <value>
                <fullName>2400 Series Elemental Analyzer</fullName>
            </value>
            <value>
                <fullName>2400 Series II Analyzer</fullName>
            </value>
            <value>
                <fullName>2400 Series II CHNS/O</fullName>
            </value>
            <value>
                <fullName>2410 Series II Analyzer</fullName>
            </value>
            <value>
                <fullName>4 DX-FAS Autosamplers</fullName>
            </value>
            <value>
                <fullName>90A Autosampler</fullName>
            </value>
            <value>
                <fullName>90plus Autosampler</fullName>
            </value>
            <value>
                <fullName>91 Autosampler</fullName>
            </value>
            <value>
                <fullName>93plus Autosampler</fullName>
            </value>
            <value>
                <fullName>AAnalyst</fullName>
            </value>
            <value>
                <fullName>AAnalyst 100</fullName>
            </value>
            <value>
                <fullName>AAnalyst 200</fullName>
            </value>
            <value>
                <fullName>AAnalyst 300</fullName>
            </value>
            <value>
                <fullName>AAnalyst 400</fullName>
            </value>
            <value>
                <fullName>AAnalyst 700</fullName>
            </value>
            <value>
                <fullName>AAnalyst 800</fullName>
            </value>
            <value>
                <fullName>APS-1650</fullName>
            </value>
            <value>
                <fullName>AS-71</fullName>
            </value>
            <value>
                <fullName>AS-72</fullName>
            </value>
            <value>
                <fullName>AS-800</fullName>
            </value>
            <value>
                <fullName>AS-900</fullName>
            </value>
            <value>
                <fullName>AS-90 Autosampler</fullName>
            </value>
            <value>
                <fullName>AS-93plus</fullName>
            </value>
            <value>
                <fullName>ASX-1400</fullName>
            </value>
            <value>
                <fullName>ASX-1600</fullName>
            </value>
            <value>
                <fullName>ASX-260</fullName>
            </value>
            <value>
                <fullName>ASX-280</fullName>
            </value>
            <value>
                <fullName>ASX-520</fullName>
            </value>
            <value>
                <fullName>ASX-520HS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>