SF-Perkin/force-app/main/default/objects/Product2/fields/B2B_Width__c.field-meta.xml
<CustomField>
    <fullName>B2B_Width__c</fullName>
    <label>Width</label>
    <length>255</length>
    <type>Text</type>
</CustomField>