SF-Perkin/force-app/main/default/objects/Product2/recordTypes/Project_Farma.recordType-meta.xml
<RecordType>
    <fullName>Project_Farma</fullName>
    <active>true</active>
    <label>Project Farma</label>
</RecordType>