SF-Perkin/force-app/main/default/objects/Product2/listViews/All_Products_Owned_by_Company_AES_LSDX.listView-meta.xml
<ListView>
    <fullName>All_Products_Owned_by_Company_AES_LSDX</fullName>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Owned_by_Company__c</columns>
    <columns>PricebookEntryID__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Owned_by_Company__c</field>
        <operation>equals</operation>
        <value>LSDX</value>
    </filters>
    <label>All Products Owned by Company AES/LSDX</label>
</ListView>