SF-Perkin/force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>IGOR_PAC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Owned_by_Company__c</field>
        <operation>equals</operation>
        <value>AES</value>
    </filters>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>equals</operation>
        <value>BC003382Z</value>
    </filters>
    <label>All Products</label>
</ListView>